# FinSight

./: .gitattributes  .gitignore  README.md  docker-compose.yml  init_postgres.sql  pyproject.toml
dags/: DB_docker_test.py
data/: connect_docker.py  connect_local.py
docs/01_planning_and_Analysis/: FINSIGHT_GUIDE_ARC_001.md  FINSIGHT_GUIDE_DD_001.md  FINSIGHT_GUIDE_DWH_001.md  FINSIGHT_GUIDE_EDA_001.md  FINSIGHT_GUIDE_SYS_001.md  FINSIGHT_GUIDE_TCS_001.md
docs/02_design_and_preparation/: FINSIGHT_ARC_ETL_001.md  FINSIGHT_ARC_ETL_002.md  FINSIGHT_ARC_SYS_001.md  FINSIGHT_DD_KIS_001.md  FINSIGHT_DD_KIS_002.md  FINSIGHT_INT_KIS_001.md  FINSIGHT_INT_KIS_002.md  FINSIGHT_TCS_ETL_001.md
scripts/: init_poetry_env.sh  test_DB_docker.sh
src/common/: entities.py
src/data/: db_handler.py
src/data/features/: feature_builder.py
src/data/schemas/: KIS_schemas.py
src/eda/: eda_pipeline.py  final_table_pipeline.py  merge_pipeline.py  preprocessor.py  tasks.py
src/eda/configs/: kr_stock_quartely_data.yml  kr_stock_static_data.yml
src/eda/configs/stock_info/: kr_stock_balance_sheet.yml  kr_stock_basic_info.yml  kr_stock_dividend.yml  kr_stock_estimate_perform.yml  kr_stock_financial_ratio.yml  kr_stock_growth_ratio.yml  kr_stock_income_statement.yml  kr_stock_other_major_ratio.yml  kr_stock_profit_ratio.yml  kr_stock_stability_ratio.yml
src/eda/configs/stock_price/: kr_stock_asking_price.yml  kr_stock_daily_itemchartprice.yml  kr_stock_price_basic.yml  kr_stock_price_detail.yml
src/eda/notebooks/: kr_stock_data_mart copy.ipynb  kr_stock_data_mart.ipynb  kr_stock_data_store.ipynb  kr_stock_quartely_data.ipynb  kr_stock_static_data.ipynb  ks200_data.csv  model_training_summary.csv
src/eda/notebooks/model_parameters/: sec_1_bear_params.json  sec_1_bull_params.json  sec_2_bear_params.json  sec_2_bull_params.json  sec_3_bear_params.json  sec_3_bull_params.json  sec_4_bear_params.json  sec_4_bull_params.json  sec_5_bear_params.json  sec_5_bull_params.json  sec_6_bear_params.json  sec_6_bull_params.json  sec_7_bear_params.json  sec_7_bull_params.json
src/eda/notebooks/model_results/: sec_1_bear_feature_importance_gain.csv  sec_1_bull_feature_importance_gain.csv  sec_2_bear_feature_importance_gain.csv  (+12 more)
src/errors/: KIS_API_errors.py
src/etl/: KIS_collector.py
src/etl/transformer/: KIS_transformer.py  interfaces.py
src/hooks/: KIS_API_hook.py
src/utils/: debug_report.py  get_asset_list.py  sql_generator.py
test/: DB_local_test.py  KIS_API_hook_test.py
(+152 files in other folders)
