[project]
name = "finsight"
version = "0.1.0"
description = ""
authors = [
    {name = "junsu0302",email = "junsu96378224@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pykrx (>=1.0.51,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "nbstripout (>=0.8.1,<0.9.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "tensorflow (>=2.16.0,<2.17.0)",
    "keras (>=3.11.3,<4.0.0)",
    "keras-tuner (>=1.4.7,<2.0.0)",
    "umap (>=0.1.1,<0.2.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "umap-learn (>=0.5.9.post2,<0.6.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "hmmlearn (>=0.3.3,<0.4.0)",
    "numpy (<2.0.0)",
    "cython (>=3.1.6,<4.0.0)",
    "pyhhmm (>=2.0.1,<3.0.0)",
    "ruptures (>=1.1.10,<2.0.0)",
    "bayesian-optimization (>=1.5.0,<1.6.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "optuna-integration (>=4.5.0,<5.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "xgboost (==2.0.3)",
    "shap (==0.45.0)",
    "scikeras (>=0.13.0,<0.14.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
